<resources>
    <string name="app_name">rs.android.task.4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_brand">enter brand (for example Moskvich)</string>
    <string name="enter_model">enter model (for example: 412)</string>
    <string name="enter_mileage_km">enter mileage, km</string>
    <string name="add_button">Save</string>
    <string name="brandView">Brand:</string>
    <string name="modelView">Model:</string>
    <string name="mileageView">Mileage:</string>
    <string name="sort_by_word">Sort by </string>
    <string name="delete">Delete</string>
    <string-array name="sort_names">
        <item>Brand</item>
        <item>Model</item>
        <item>Mileage</item>
    </string-array>
    <string-array name="sort_values">
        <item>brand</item>
        <item>model</item>
        <item>mileage</item>
    </string-array>
</resources>